<resources>
    <string name="app_name">Smarkt Go</string>
    <string name="mustNotBeEmpty">Field must not be empty!</string>

    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>

    <string name="welcome">Welcome!</string>
    <string name="settings">Settings</string>

    <string name="supermarket">Supermarket</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="cart_group">Cart group</string>
    <string name="empty_cart">Empty cart</string>
    <string name="no_items">No items</string>
    <string name="quote">Look no further! We got everything for you</string>
    <string name="otp_verification">Otp verification</string>
    <string name="required">Required*</string>
    <string name="verify">Verify</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="ticket">Ticket</string>
    <string name="a_6_digit_code">a 6-digit code</string>
    <string name="scan">Scan</string>
    <string name="your_wallet">Your wallet:</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="no_favorites">No favorites</string>
    <string name="nearest_supermarkets">Nearest supermarkets</string>
    <string name="see_all">See all</string>
    <string name="see_more">See more</string>
    <string name="edit">Edit</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="already_have_orders">You already have orders from another supermarket!</string>
    <string name="wallet">Wallet</string>
    <string name="log_out">Log out</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="dairy_products"> Dairyproducts</string>
    <string name="baby_food"> Baby food</string>
    <string name="languages">Languages</string>
    <string name="english">🇺🇸 English</string>
    <string name="french">🇫🇷 French</string>

    <string name="type_the_ticket_code">Type the ticket s code!</string>
    <string name="type_a_valid_code">Type a valid code!</string>
    <string name="invalid_ticket">Invalid ticket!</string>
    <string name="ticket_not_found">Ticket not found!</string>

    <string name="type_the_otp">Type the OTP!</string>
    <string name="type_a_digit_6_code">Type a 6-digit code!</string>
    <string name="invalid_otp">Invalid OTP!</string>

    <string name="type_your_phone_number">Type your phone number!</string>
    <string name="type_a_valid_phone_number">Type a valid phone number!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please wait!</string>
    <string name="preparing_image">Preparing image </string>
    <string name="recognizing_text">Recognizing text</string>
    <string name="recognizing_failed">Failed to recognize text due to</string>
    <string name="preparing_failed">Failed to prepare image due to</string>
    <string name="selection_failed">Please choose an image!</string>
    <string name="camera_required">Camera permission required!</string>
    <string name="storage_required">Storage permission required!</string>


    <string name="chat">Chat</string>
    <string name="member_added">Member added</string>

    <string name="contact">Contact</string>
    <string name="score">Score</string>
    <string name="submit">Submit</string>
    <string name="reviewdescription">Description</string>
    <string name="reviewtitle">Title</string>
    <string name="review">Your review</string>
    <string name="noreview">No reviews yet! Add yours</string>





    <string name="mapbox_access_token">pk.eyJ1IjoibWlzbGVtIiwiYSI6ImNsYWxvc3p4NTA3ZW4zcXQ3djAyN2ppcGMifQ.JCoW7G8Ona4ivtAJVeJjmQ</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>