<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/walletTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_wallet"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/walletTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toTopOf="@id/walletTv"
            app:layout_constraintStart_toEndOf="@id/walletTv"/>

        <TextView
            android:id="@+id/totalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/walletTv"/>


        <TextView
            android:id="@+id/totalTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toTopOf="@id/totalTV"
            app:layout_constraintStart_toEndOf="@id/totalTV"/>

        <Button
            android:id="@+id/payButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/button_style"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            app:backgroundTint="@color/green"
            android:layout_marginEnd="20dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

